# rave

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  file_map.txt  plan.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  gpu-validate.yml  sanitizers.yml  windows-gpu-ci.yml
crates/rave-core/: Cargo.toml  README.md  build.rs
crates/rave-core/src/: backend.rs  codec_traits.rs  context.rs  error.rs  host_copy_audit.rs  lib.rs  types.rs
crates/rave-cuda/: Cargo.toml  README.md
crates/rave-cuda/src/: blur.rs  kernels.rs  lib.rs  stream.rs  sys.rs
crates/rave-ffmpeg/: Cargo.toml  README.md
crates/rave-ffmpeg/src/: ffmpeg_demuxer.rs  ffmpeg_demuxer_stub.rs  ffmpeg_muxer.rs  ffmpeg_muxer_stub.rs  ffmpeg_sys.rs  ffmpeg_sys_stub.rs  file_sink.rs  file_source.rs  lib.rs  probe_stub.rs
crates/rave-nvcodec/: Cargo.toml  README.md  build.rs
crates/rave-nvcodec/src/: config.rs  lib.rs  nvdec.rs  nvdec_stub.rs  nvenc.rs  nvenc_stub.rs  sys.rs
crates/rave-pipeline/: Cargo.toml  README.md
crates/rave-pipeline/src/: inference.rs  lib.rs  pipeline.rs  pipeline_stub.rs  runtime.rs  stage_graph.rs
crates/rave-runtime-nvidia/: Cargo.toml  README.md
crates/rave-runtime-nvidia/src/: lib.rs
crates/rave-tensorrt/: Cargo.toml  README.md
crates/rave-tensorrt/src/: lib.rs  tensorrt.rs  tensorrt_stub.rs
crates/rave-tensorrt/tests/: provider_bridge_smoke.rs
docs/: PHASE11_CLI_CHECKLIST.md  RoadMap.md  Roadmap.Expanded.md  Technical-Audit.md  WSL.md  case-study-v0.4.0.md  integration_contract.md  no_host_copies.md  rave_Phase10_Execution_Contract.md  release_v0.2.md  unsafe_audit.md  windows_integration_checklist.md  wsl_benchmark.md
docs/architecture/: ENGINE_V2_CONSTITUTION.md.complete
docs/roadmaps/: v0.4.1-checklist-issue.md  v0.4.1-checklist.md
engine-v2/: Cargo.toml  build.rs  engine-v2_layout.txt  file_map.txt
engine-v2/.cargo/: config.toml
engine-v2/src/: debug_alloc.rs  error.rs  lib.rs  main.rs  probe_ort.rs
engine-v2/src/backends/: mod.rs  tensorrt.rs
engine-v2/src/codecs/: mod.rs  nvdec.rs  nvenc.rs  sys.rs
engine-v2/src/core/: backend.rs  context.rs  kernels.rs  mod.rs  types.rs
engine-v2/src/engine/: inference.rs  mod.rs  pipeline.rs
engine-v2/src/io/: ffmpeg_demuxer.rs  ffmpeg_muxer.rs  ffmpeg_sys.rs  file_sink.rs  file_source.rs  mod.rs  probe.rs
examples/: simple_upscale.rs
legacy/: README.md
legacy/engine-v2/: Cargo.toml  build.rs  engine-v2_layout.txt
legacy/engine-v2/.cargo/: config.toml
legacy/engine-v2/src/: debug_alloc.rs  error.rs  lib.rs  main.rs  probe_ort.rs
legacy/engine-v2/src/backends/: mod.rs  tensorrt.rs
legacy/engine-v2/src/codecs/: mod.rs  nvdec.rs  nvenc.rs  sys.rs
legacy/engine-v2/src/core/: backend.rs  context.rs  kernels.rs  mod.rs  types.rs
legacy/engine-v2/src/engine/: inference.rs  mod.rs  pipeline.rs
legacy/engine-v2/src/io/: ffmpeg_demuxer.rs  ffmpeg_muxer.rs  ffmpeg_sys.rs  file_sink.rs  file_source.rs  mod.rs  probe.rs
rave-cli/: CHANGELOG.md  Cargo.toml  README.md
rave-cli/src/: main.rs
rave-cli/tests/: cli_stream_contract.rs  cli_subcommands.rs
reports/: phase10_bench_2026-02-17.md  phase10_exit_criteria.md  phase11_exit_criteria.md
scripts/: build.ps1  check_deps.py  check_deps.sh  check_docs.sh  diagnose_wsl_cuda.sh  gdb_bench.sh  gen_test_model_resize2x.py  publish_crates.sh  repro_wsl.sh  run_cuda_probe.sh  smoke_upscale.ps1  test.ps1  verify_wsl_ort_ep.sh  wsl_gpu_healthcheck.sh
scripts/wsl/: env.sh  run_bench.sh
tests/assets/models/: README.md  resize2x_rgb.onnx
tests/fixtures/: graph_production_strict.json  validate_production_strict.json
