[workspace]
resolver = "3"
members = [
  "crates/rave-core",
  "crates/rave-cuda",
  "crates/rave-ffmpeg",
  "crates/rave-nvcodec",
  "crates/rave-pipeline",
  "crates/rave-tensorrt",
  "rave-cli",
]
exclude = ["legacy/**", "third_party/**", "target/**"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/CalvinSturm/rave"
homepage = "https://github.com/CalvinSturm/rave"
authors = ["Calvin Sturm <calvinsturm@proton.me>"]

[workspace.dependencies]
rave-core = { version = "0.2.1", path = "crates/rave-core" }
rave-cuda = { version = "0.2.1", path = "crates/rave-cuda" }
rave-tensorrt = { version = "0.2.1", path = "crates/rave-tensorrt" }
rave-nvcodec = { version = "0.2.1", path = "crates/rave-nvcodec" }
rave-ffmpeg = { version = "0.2.1", path = "crates/rave-ffmpeg" }
rave-pipeline = { version = "0.2.1", path = "crates/rave-pipeline" }
cudarc = { version = "0.12", features = ["driver", "nvrtc", "cuda-12060"] }
ort = { version = "2.0.0-rc.11", features = ["cuda", "tensorrt"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
half = { version = "2", features = ["num-traits"] }
ffmpeg-sys-next = "8"
clap = { version = "4", features = ["derive"] }
