[package]
name = "rave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RAVE CLI — GPU-native video super-resolution engine."
readme = "../README.md"

[[bin]]
name = "rave"
path = "src/main.rs"
doc = false

[features]
default = []
debug-alloc = ["rave-core/debug-alloc", "rave-pipeline/debug-alloc", "rave-tensorrt/debug-alloc"]

[dependencies]
rave-core = { workspace = true }
rave-cuda = { workspace = true }
rave-tensorrt = { workspace = true }
rave-nvcodec = { workspace = true }
rave-ffmpeg = { workspace = true }
rave-pipeline = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = "1"
