[package]
name = "rave-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "RAVE CLI — GPU-native video super-resolution engine."
readme = "README.md"
keywords = ["video", "gpu", "ai", "upscaling", "cli"]
categories = ["command-line-utilities", "multimedia"]
publish = false

[[bin]]
name = "rave"
path = "src/main.rs"
doc = false

[features]
default = []
debug-alloc = ["rave-core/debug-alloc", "rave-pipeline/debug-alloc"]
audit-no-host-copies = ["rave-core/audit-no-host-copies", "rave-pipeline/audit-no-host-copies"]

[lints]
workspace = true

[dependencies]
rave-core = { workspace = true }
rave-pipeline = { workspace = true, features = ["nvidia-run-graph"] }
rave-runtime-nvidia = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
