[package]
name = "rave-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "RAVE core types, traits, context, and error hierarchy."
readme = "README.md"
include = ["Cargo.toml", "README.md", "build.rs", "src/**"]
keywords = ["gpu", "video", "cuda", "nvidia", "super-resolution"]
categories = ["multimedia", "hardware-support"]

[features]
default = []
debug-alloc = []
audit-no-host-copies = []
ort-errors = ["dep:ort"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
no-default-features = true

[dependencies]
cudarc = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
half = { workspace = true }
tracing = { workspace = true }
ort = { workspace = true, optional = true }
