[package]
name = "rave-cuda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "RAVE CUDA kernels, timers, and stream helpers."
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**"]
keywords = ["cuda", "gpu", "nvidia", "kernels", "video"]
categories = ["multimedia", "hardware-support"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
no-default-features = true

[dependencies]
rave-core = { workspace = true }
cudarc = { workspace = true }
tracing = { workspace = true }
