[package]
name = "rave-ffmpeg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "RAVE FFmpeg container I/O (demux, mux, probe)."
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**"]
keywords = ["ffmpeg", "video", "demux", "codec", "gpu"]
categories = ["multimedia", "hardware-support"]

[features]
default = ["ffmpeg-runtime"]
ffmpeg-runtime = ["dep:ffmpeg-sys-next"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rave-core = { workspace = true }
ffmpeg-sys-next = { workspace = true, optional = true }
tracing = { workspace = true }
