[package]
name = "rave-nvcodec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "RAVE NVDEC/NVENC hardware codec wrappers."
readme = "README.md"
include = ["Cargo.toml", "README.md", "build.rs", "src/**"]
keywords = ["nvenc", "nvdec", "nvidia", "video", "gpu"]
categories = ["multimedia", "hardware-support"]
build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rave-core = { workspace = true }
cudarc = { workspace = true }
tracing = { workspace = true }
