[package]
name = "rave-runtime-nvidia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "RAVE NVIDIA runtime composition (CUDA + TensorRT + FFmpeg + NVDEC/NVENC)."
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**"]
keywords = ["cuda", "tensorrt", "nvenc", "nvdec", "video"]
categories = ["multimedia", "hardware-support"]

[features]
default = ["nvidia-runtime"]
nvidia-runtime = ["rave-ffmpeg/ffmpeg-runtime", "rave-tensorrt/tensorrt-runtime"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rave-core = { workspace = true }
rave-cuda = { workspace = true }
rave-tensorrt = { version = "0.4.0", path = "../rave-tensorrt", default-features = false }
rave-nvcodec = { workspace = true }
rave-ffmpeg = { version = "0.4.0", path = "../rave-ffmpeg", default-features = false }
