[package]
name = "rave-tensorrt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RAVE TensorRT inference backend."
readme = "../../README.md"

[features]
default = []
debug-alloc = ["rave-core/debug-alloc"]

[dependencies]
rave-core = { workspace = true }
ort = { workspace = true }
cudarc = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
half = { workspace = true }
