[package]
name = "rave-tensorrt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "RAVE TensorRT inference backend."
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**", "tests/**"]
keywords = ["tensorrt", "inference", "onnx", "gpu", "ai"]
categories = ["science", "hardware-support"]

[features]
default = ["tensorrt-runtime"]
debug-alloc = ["rave-core/debug-alloc"]
audit-no-host-copies = ["rave-core/audit-no-host-copies"]
tensorrt-runtime = ["dep:ort", "rave-core/ort-errors"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rave-core = { workspace = true }
ort = { workspace = true, optional = true }
cudarc = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
half = { workspace = true }
