[package]
name = "rave-engine"
version = "2.0.0"
edition = "2024"
description = "Deterministic GPU video inference engine. GPU-resident NVDEC→TensorRT→NVENC super-resolution pipeline in Rust."
license = "MIT"
repository = "https://github.com/CalvinSturm/rave"
homepage = "https://github.com/CalvinSturm/rave"
documentation = "https://docs.rs/rave-engine"
# crates.io allows max 5 keywords
keywords = ["gpu", "video", "tensorrt", "nvdec", "super-resolution"]
categories = ["multimedia::video", "computer-vision"]
authors = ["Calvin Sturm <calvinsturm@proton.me>"]
readme = "../README.md"

[[bin]]
name = "rave"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# CUDA Driver API — safe wrappers, stream management, kernel launch
# Note: cuda-12060 feature works with CUDA 12.8 toolkit (driver API is backwards-compatible)
cudarc = { version = "0.12", features = ["driver", "nvrtc", "cuda-12060"] }

# ONNX Runtime — TensorRT execution provider, IO binding
ort = { version = "2.0.0-rc.11", features = ["cuda", "tensorrt"] }

# Async runtime — multi-threaded, bounded channels, cancellation
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support (dyn dispatch for UpscaleBackend)
async-trait = "0.1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# f16 tensor support
half = { version = "2", features = ["num-traits"] }

# FFmpeg FFI — container demux/mux (MP4, MKV, MOV, etc.)
ffmpeg-sys-next = "8"

[features]
default = []
# Debug-only host allocation tracking. Wraps global allocator.
# Do NOT enable in release builds.
debug-alloc = []
